Add UnsafeUtils class